[package]
name = "futures-await-synom"
version = "0.12.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Temporary fork of `synom` for the futures-await crate"
repository = "https://github.com/alexcrichton/futures-await-synom"

[dependencies]
futures-await-quote = { version = "0.4", optional = true }
proc-macro2 = "0.1"

[features]
printing = ["futures-await-quote"]
parsing = []
default = []
clone-impls = []
extra-traits = []

[dev-dependencies.futures-await-syn]
version = "0.11"
path = ".."
features = ["parsing", "full", "extra-traits"]
default-features = false
